--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Projet CPOA par Gisonni Sylvio et Louis Schneider 
+Projet CPOA réalisé par Gisonni Sylvio et Louis Schneider 
 ---------------------------------------------------------------
 
 Page principale : 
